<resources>
    <string name="app_name">MyHSS</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="qr_code_generate">Generate QR Code</string>
    <string name="qr_code_scan">Scan QR Code</string>
    <string name="start_end_date">Start Date / End Date</string>
    <string name="error_no_data">No data</string>
    <string name="no_connection">No internet connection</string>
    <string name="some_thing_wrong">Something wrong</string>
    <string name="menu_dashboard">Dashboard</string>
    <string name="menu_organization">Organization</string>
    <string name="menu_shakha">Shakha</string>
    <string name="menu_shakha_type">Shakha Type</string>
    <string name="menu_roles">Roles</string>
    <string name="menu_roles_responsibility">Roles &amp; Responsibility</string>
    <string name="menu_karyakarts">Karyakartas</string>
    <string name="menu_sankhya_report">Sankhya Report</string>
    <string name="menu_setting">Setting</string>
    <string name="menu_policiies">Policies</string>
    <string name="menu_logout">Logout</string>
    <string name="default_notification_channel_id">AIzaSyBk7PnvOUhDTD-elGpVpgjXNK-UX05xto4</string>
    <string name="unlock_myhss">Unlock MyHSS</string>
    <string name="confirm_screen_pin">Confirm your screen lock PIN, Pattern or Password</string>
    <string name="appcamera">CAMERA</string>
    <string name="appgallery">GALLERY</string>
    <string name="appsel_img">Select Image from</string>
    <string name="about_us">About Me</string>
    <string name="personal_info">Personal Information</string>
    <string name="contact_info">Contact Information</string>
    <string name="other_info">Other Information</string>
    <string name="personal_infomation">Personal Information</string>
    <string name="contact_infomation">Contact Information</string>
    <string name="guardian_information">Guardian Information</string>
    <string name="other_infomation">Other Information</string>
    <string name="one_time">One-Time</string>
    <string name="regular">Regular</string>
    <string name="payment_method">Payment Method</string>
    <string name="billing_information">Billing Information</string>
    <string name="card_number">Card Number</string>
    <string name="expiration_date">Expiration date</string>
    <string name="expiration_dd_yy">MM/YYYY</string>
    <string name="ccv_no">Ccv</string>
    <string name="card_holder_name">Card Holder Name</string>
    <string name="donate">Donate</string>
    <string name="order_id">Order Id</string>
    <string name="payment_status">Payment Status</string>
    <string name="frequency">Frequency</string>
    <string name="sort_code">Sort Code</string>
    <string name="account_name">Account Name</string>
    <string name="account_number">Account Number</string>
    <string name="donate_amount">Donate Amount</string>
    <string name="are_you_giving_dakshina">Are you giving this Dakshina as part of the Guru Purnima Utsav</string>
    <string name="donating_individual_family">Donating as an Individual or Family? *</string>
    <string name="donating_individual">Individual</string>
    <string name="donating_family">Family</string>
    <string name="gift_aid">Gift Aid</string>
    <string name="gift_aid_declaration">Gift Aid Declaration:</string>
    <string name="payment_start_date">Payment Start Date</string>
    <string name="how_often_like_to_donate">How often would you like to donate? </string>
    <string name="donating_as_individual_or_family">Donating as an Individual or Family? *</string>
    <string name="disclaimer_notify"><b>Disclaimer:</b>  Please notify HSS (UK) if you:</string>
    <string name="disclaimer_want_cancel">  Want to cancel this declaration</string>
    <string name="disclaimer_change_name">  Change your name or home address</string>
    <string name="disclaimer_no_longer">  No longer pay sufficient tax on your income and/or capital gains</string>
    <string name="contribution_type">Contribution Type</string>
    <string name="reference">Reference</string>
    <string name="status">Status</string>
    <string name="date">Date</string>
    <string name="frequency_of_donation">Frequency of Donation</string>
    <string name="all_shakha">All Shakha</string>
    <string name="shakha_details">Shakha Details</string>
    <string name="my_suchna_board">Suchana Board</string>
    <string name="my_sangh_sandesh">Sangh Mail/Sangh Sandesh</string>
    <string name="my_notification">Notifications</string>
    <string name="my_family">My Family</string>
    <string name="kendriya">Kendriya</string>
    <string name="support">Support</string>
    <string name="my_shakha">My Shakha</string>
    <string name="my_nagar">My Nagar</string>
    <string name="my_vibhag">My Vibhag</string>
    <string name="guru_dakshina">Guru Dakshina</string>
    <string name="shishu">Shishu</string>
    <string name="male_shishu">Shishu_male</string>
    <string name="female_shishu">Shishu_female</string>
    <string name="shishu_content">Below 5 Years</string>
    <string name="baal">Baal</string>
    <string name="baalika">Baalika</string>
    <string name="baalika_content">5 to 11 Years - Primary School</string>
    <string name="kishore">Kishore</string>
    <string name="kishori">Kishori</string>
    <string name="kishori_content">11 to 16 Years - High School</string>
    <string name="tarun">Tarun</string>
    <string name="taruni">Taruni</string>
    <string name="taruni_content">16 to 30 years</string>
    <string name="yuva">Yuva</string>
    <string name="yuvati">Yuvati</string>
    <string name="yuvati_content">30 to 60 years</string>
    <string name="jyeshta">Jyeshtha</string>
    <string name="jyeshtaa">Jyeshthaa</string>
    <string name="proudh">Proudh</string>
    <string name="proudha">Proudha</string>
    <string name="jyeshtaa_content">60+ years</string>
    <string name="clear_txt">Clear</string>
    <string name="home_name">Home</string>
    <string name="organistion_name">Organisation</string>
    <string name="shakha_name">Shakha</string>
    <string name="shakha_type_name">Shakha Type</string>
    <string name="role_name">Role</string>
    <string name="role_resposiblity_name">Role &amp; Responsibility</string>
    <string name="karyakartas_name">Karyakartas</string>
    <string name="sankhya_name">Sankhya Report</string>
    <string name="settings_name">Settings</string>
    <string name="policies_name">Policies</string>
    <string name="logout_name">Logout</string>
    <string name="role_txt">Role</string>
    <string name="name_txt">Name</string>
    <string name="email_txt">Email</string>
    <string name="dob_txt">DOB</string>
    <string name="shakha_txt">Shakha</string>
    <string name="nagar_txt">Nagar</string>
    <string name="vibhag_txt">Vibhag</string>
    <string name="mobile_txt">Mobile No.</string>
    <string name="sec_contact_txt">Secondary Contact No.</string>
    <string name="emergency_txt">EMERGENCY/GUARDIAN INFO</string>
    <string name="phone_no_txt">Phone No.</string>
    <string name="relation_ship_txt">Relationship</string>
    <string name="qualification_first_aid_txt">qualification in First Aid?</string>
    <string name="dbs_certification_number">DBS Certificate Number</string>
    <string name="dbs_certification_date">DBS Certificate Date</string>
    <string name="safeguarding_training">Safeguarding Training</string>
    <string name="google">Google</string>
    <string name="facebook">Facebook</string>
    <string name="profile">Profile</string>
    <string name="family_member">Family Member</string>
    <string name="select_family_member">Select Family Member</string>
    <string name="suryanamaskar_graph">Surya Namaskar Statistics</string>
    <string name="edit_txt">Edit</string>
    <string name="delete_txt">Delete</string>
    <string name="or_text">OR</string>
    <string name="email_address">Email address</string>
    <string name="password">Password</string>
    <string name="reset_password">Reset Password</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="change_my_mind">I have changed my mind! </string>
    <string name="forgot_password">Forgot password?</string>
    <string name="sign_in">Sign In</string>
    <string name="full_name">Full name</string>
    <string name="username">Username</string>
    <string name="email_mobile">Email address/Mobile no.</string>
    <string name="confirm_password">Confirm password</string>
    <string name="register">Register</string>
    <string name="login_details_register">Login Details</string>
    <string name="user_note_register">Usernames should be something memorable e.g. FirstnameSurname. These can contain letters and numbers only (no spaces &amp; no special characters).</string>
    <string name="password_note_register">Please use 8 or more characters with a mix of letters, numbers &amp; symbols. e.g. Abcd@123</string>
    <string name="already_user">I already have a membership! </string>
    <string name="terms_condtion"><html>Choosing Register means that you agree to the Hss (UK) <a href="https://dev.myhss.org.uk/page/privacy-policy/1">Privacy Policy </a> and the <a href="https://dev.myhss.org.uk/page/privacy-policy/1">MyHss Terms &amp; Conditions</a></html></string>
    <string name="terms_condtionmsg">Agree to the Hss (UK) </string>
    <string name="terms_privacy">Privacy Policy</string>
    <string name="terms_terms">MyHss Terms &amp; Conditions</string>
    <string name="forgot_your_password">Forgot your password ? </string>
    <string name="submit">Submit</string>
    <string name="sub_title">Fingerprint Access</string>
    <string name="description_title">Touch finger to access application</string>
    <string name="cancel">Cancel</string>
    <string name="go_back">Go Back</string>
    <string name="dont_have_account">Do not have an account?</string>
    <string name="login">Login</string>
    <string name="login_in">Log In</string>
    <string name="welocome">Welcome</string>
    <string name="heading_AddMembers">Add Members</string>
    <string name="Personal_Info">Personal Infomation</string>
    <string name="enter_Fullname">Enter fullname</string>
    <string name="enter_Firstname">Enter first name</string>
    <string name="enter_Middlename">Enter middle name</string>
    <string name="enter_Surname">Enter surname</string>
    <string name="fullname">Fullname</string>
    <string name="firstname">First name</string>
    <string name="middlename">Middle name</string>
    <string name="surname">Surname</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="utsav">Which Utsav did you celebrate? (Optional)</string>
    <string name="dateofbirth">Date of birth</string>
    <string name="dd_mm_yyyy">DD / MM / YYYY</string>
    <string name="ageTipText">As your age is below 18, we will send one email to your guardian for the approval purpose.</string>
    <string name="ok">Ok</string>
    <string name="success">Success</string>
    <string name="Please_check_your_email">Please check your email </string>
    <string name="shobha_com">shobha@gmail.com </string>
    <string name="to_verify_your_account">to verify your account.</string>
    <string name="edit_sn_count">Edit Count</string>
    <string name="delete_sn_count">Delete Count</string>
    <string name="would_you_like_to_edit_delete_the_surya_namaskar_count">Would you like to edit or delete this Surya Namaskar count?</string>
</resources>