<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/registration_success_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/transparentColor">


    <RelativeLayout
        android:id="@+id/bottom_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="35dp"
        android:background="@drawable/toprounded">


        <TextView
            android:id="@+id/success_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/padding40"
            android:text="@string/success"
            android:textColor="@color/greenColor"
            android:textSize="@dimen/font_size30"
            android:textStyle="bold"
            android:theme="@style/StyleTextView" />

        <TextView
            android:id="@+id/check_emal_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/success_txt"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/padding20"
            android:text="@string/Please_check_your_email"
            android:textSize="@dimen/font_size20"
            android:theme="@style/StyleTextView" />

        <!--<LinearLayout
            android:id="@+id/emal_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/check_emal_txt"
            android:orientation="horizontal" >-->

        <TextView
            android:id="@+id/emal_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/check_emal_txt"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/padding5"
            android:text="@string/shobha_com"
            android:textColor="@color/orangeColor"
            android:textSize="@dimen/font_size20"
            android:theme="@style/StyleTextView" />

        <TextView
            android:id="@+id/emaltxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/emal_txt"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/padding5"
            android:text="@string/to_verify_your_account"
            android:textSize="@dimen/font_size20"
            android:theme="@style/StyleTextView" />


        <ImageView
            android:id="@+id/close_layout"
            android:layout_width="@dimen/padding20"
            android:layout_height="@dimen/padding20"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="@dimen/padding5"
            android:layout_marginEnd="@dimen/padding30"
            android:src="@drawable/close_img"
            tools:ignore="ContentDescription" />

        <androidx.cardview.widget.CardView
            android:id="@+id/submit_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/emaltxt"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/font_size20"
            android:layout_marginTop="@dimen/padding25"
            android:layout_marginEnd="@dimen/font_size20">

            <TextView
                android:id="@+id/registration_success_btn"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/button_round"
                android:fontFamily="@font/sourcesanspro_regular"
                android:gravity="center"
                android:padding="12dp"
                android:paddingStart="@dimen/padding60"
                android:paddingEnd="@dimen/padding60"
                android:text="@string/ok"
                android:textColor="@color/white"
                android:textSize="18sp" />

        </androidx.cardview.widget.CardView>

    </RelativeLayout>

    <ImageView
        android:id="@+id/imgSuccess"
        android:layout_width="@dimen/padding70"
        android:layout_height="@dimen/padding70"
        android:layout_above="@+id/bottom_view"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="-70dp"
        android:src="@drawable/right_green" />

</RelativeLayout>