<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/forgot_password_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:padding="@dimen/padding10">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/forgot_your_password"
        android:theme="@style/StyleTextView" />

    <ImageView
        android:id="@+id/close_layout"
        android:layout_width="@dimen/padding20"
        android:layout_height="@dimen/padding20"
        android:layout_alignParentRight="true"
        android:layout_marginEnd="@dimen/padding30"
        android:src="@drawable/close_img" />

    <LinearLayout
        android:id="@+id/user_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/close_layout"
        android:layout_marginTop="@dimen/padding20"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="@dimen/padding20"
            android:layout_height="@dimen/padding20"
            android:layout_gravity="center_vertical"
            android:src="@drawable/user_img" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_forgotPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            app:errorIconDrawable="@null">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_forgotusername"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"
                android:cursorVisible="true"
                android:focusable="true"
                android:fontFamily="@font/sourcesanspro_regular"
                android:hint="@string/username"
                android:overScrollMode="always"
                android:scrollbarStyle="insideInset"
                android:scrollbars="vertical"
                android:textColor="@color/blackColor"
                android:textColorHint="@color/grayColorColor"
                android:textCursorDrawable="@null"
                android:theme="@style/StyleEditTextView" />

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>


    <androidx.cardview.widget.CardView
        android:id="@+id/submit_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/user_layout"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="@dimen/padding40">

        <TextView
            android:id="@+id/forgot_passwordbtn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/button_round"
            android:fontFamily="@font/sourcesanspro_regular"
            android:gravity="center"
            android:padding="12dp"
            android:paddingStart="@dimen/padding45"
            android:paddingEnd="@dimen/padding45"
            android:text="@string/submit"
            android:textColor="@color/white"
            android:textSize="18sp" />

    </androidx.cardview.widget.CardView>

</RelativeLayout>